--- a/ex4/main.html
+++ b/ex4/main.html
@@ -7,36 +7,52 @@
     <title>Exercicio 1</title>
 </head>
 <body>
-    <div class="card blue">
-        <h3>7:25 AM</h3>
-        <img src="https://img.icons8.com/ios-filled/50/00bcd4/airplane-take-off.png" alt="">
-        <p>Boston</p>
+  <div class="card blue">
+    <div class="card-header">7:25 AM</div>
+    <div class="card-content">
+      <img src="https://img.icons8.com/ios-filled/50/00bcd4/airplane-take-off.png" alt="airplane">
+      <p>Boston</p>
     </div>
-     <div class="card blue">
-       <h3>8:15 PM</h3>
-       <img src="https://img.icons8.com/ios-filled/50/00bcd4/airplane-landing.png" alt="">
-       <p>Madrid</p>
-     </div>
-    <div class="card blue">
-        <h3>Translate</h3>
-        <img src="https://img.icons8.com/ios-filled/50/00bcd4/google-translate.png" alt="">
-        <p>Spanish</p>
-    </div>
+  </div>
 
-    <div class="card orange">
-        <h3>Bike</h3>
-        <img src="https://img.icons8.com/ios-filled/50/ff9800/bicycle.png" alt="">
-        <p>13.1 Miles</p>
+  <div class="card blue">
+    <div class="card-header">8:15 PM</div>
+    <div class="card-content">
+      <img src="https://img.icons8.com/ios-filled/50/00bcd4/airplane-landing.png" alt="airplane">
+      <p>Madrid</p>
     </div>
-    <div class="card orange">
-        <h3>Boat</h3>
-        <img src="https://img.icons8.com/?size=100&id=10699&format=png&color=ff9800" alt="">
-        <p>90 Minutes</p>
+  </div>
+
+  <div class="card blue">
+    <div class="card-header">Translate</div>
+    <div class="card-content">
+      <img src="https://img.icons8.com/ios-filled/50/00bcd4/google-translate.png" alt="translate">
+      <p>Spanish</p>
     </div>
-    <div class="card orange">
-        <h3>Drive</h3>
-        <img src="https://img.icons8.com/ios-filled/50/ff9800/car.png" alt="">
-        <p>48 Miles</p>
+  </div>
+
+  <div class="card orange">
+    <div class="card-header">Bike</div>
+    <div class="card-content">
+      <img src="https://img.icons8.com/ios-filled/50/ff9800/bicycle.png" alt="bike">
+      <p>13.1 Miles</p>
     </div>
+  </div>
+
+  <div class="card orange">
+    <div class="card-header">Boat</div>
+    <div class="card-content">
+      <img src="https://img.icons8.com/?size=100&id=10699&format=png&color=ff9800" alt="">
+      <p>90 Minutes</p>
+    </div>
+  </div>
+
+  <div class="card orange">
+    <div class="card-header">Drive</div>
+    <div class="card-content">
+      <img src="https://img.icons8.com/ios-filled/50/ff9800/car.png" alt="car">
+      <p>48 Miles</p>
+    </div>
+  </div>
 </body>
 </html>
